Updated recent section spacing fix.

--- a/steam/custom-css/library.css
+++ b/steam/custom-css/library.css
@@ -117,8 +117,7 @@
   width: var(--cover-width) !important;
   height: var(--cover-height) !important;
 }
-._2XftMcBO9aY7VXCivzuW7-
-  ._1R9r2OBCxAmtuUVrgBEUBw.ZsU8nIIpj8MJn0vzMzSp1 {
+._2XftMcBO9aY7VXCivzuW7- ._1R9r2OBCxAmtuUVrgBEUBw.ZsU8nIIpj8MJn0vzMzSp1 {
   padding-top: calc(var(--cover-height) - 76px);
 }
 /* */
@@ -192,9 +191,7 @@
 }
 
 ._1pwP4eeP1zQD7PEgmsep0W
-  .kX-tIJx4a9vKVuUkKJARv._1wAArO4jx5Kth5YdKAQ_Sd:not(
-    ._3BNwjsy5WltxayFptkx3KF
-  ) {
+  .kX-tIJx4a9vKVuUkKJARv._1wAArO4jx5Kth5YdKAQ_Sd:not(._3BNwjsy5WltxayFptkx3KF) {
   background: #24282f;
   display: block;
   height: 100%;
@@ -205,8 +202,7 @@
 }
 ._54PuCatl_tYG836TOs4Mv
   .WYgDg9NyCcMIVuMyZ_NBC:hover:not(
-    ._3VOR2AeYATx3qSE0I-Pm-5
-      .kX-tIJx4a9vKVuUkKJARv._1wAArO4jx5Kth5YdKAQ_Sd
+    ._3VOR2AeYATx3qSE0I-Pm-5 .kX-tIJx4a9vKVuUkKJARv._1wAArO4jx5Kth5YdKAQ_Sd
   ) {
   transform: rotateX(3deg) translateZ(15px);
 }
@@ -219,7 +215,7 @@
 
 /* fix recent section spacing */
 ._1RLnyCu6_DW-NTlpHTBhig[style*='height'] {
-  margin-bottom: -42px;
+  margin-bottom: -22px;
 }
 
 /* fix uninstalled games */
